force-app/main/default/objects/Client_User_Detail__c/Client_User_Detail__c.object-meta.xml
<CustomObject>
    <label>Client User Detail</label>
    <nameField>
        <displayFormat>CUD-{00000}</displayFormat>
        <label>Client User Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>