force-app/main/default/objects/Client_User_Detail__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client User Details</relationshipLabel>
    <relationshipName>Client_User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>