force-app/main/default/objects/Client_User_Detail__c/fields/External_User_Email__c.field-meta.xml
<CustomField>
    <fullName>External_User_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>