force-app/main/default/objects/Client_User_Detail__c/fields/External_User_Name__c.field-meta.xml
<CustomField>
    <fullName>External_User_Name__c</fullName>
    <label>User Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>