force-app/main/default/objects/Client_User_Detail__c/fields/External_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>External_User_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>