force-app/main/default/objects/Client_User_Detail__c/fields/Marketing_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Attribution__c</fullName>
    <label>Marketing Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>