force-app/main/default/objects/Client_User_Detail__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Care Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Care Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>